# markdownankisync

./: .gitignore  Cargo.toml  README.md  flake.nix  vocabulary.md
docs/: README.md
src/: anki.rs  api.rs  file_manager.rs  lib.rs  main.rs  parser.rs  renderer.rs  tui.rs
src/anki/: mod.rs
test_data/: easy_vocab.md  test.md  vocabulary.md
